--- a/components/utils/CMakeLists.txt
+++ b/components/utils/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "src/utils.c" INCLUDE_DIRS "include")
+idf_component_register(SRC_DIRS "src" INCLUDE_DIRS "include" REQUIRES driver freertos)
