--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "main.cpp" INCLUDE_DIRS "." REQUIRES utils wifi)
+idf_component_register(SRCS "main.c" INCLUDE_DIRS "." REQUIRES utils wifi)
